<resources>
    <string name="app_name">P.A.S.</string>

    <string name="add_tv_enter_name">Entrez le nom du nouvel utilisateur : </string>
    <string name="add_tv_login">Login : </string>
    <string name="add_et_hint_login">Entrez ici votre nom</string>
    <string name="add_tv_error_no_login">Entrez un login</string>
    <string name="add_tv_error_login_exists">Un utilisateur a déjà ce login</string>
    <string name="add_btn_create">Créer</string>
    <string name="add_btn_return">Retour</string>

    <string name="del_tv_warning">Attention, cette opération est irréversible et détruira toutes les donnée concernant l\'utilisateur.</string>
    <string name="del_tv_enter_name">Sélectionnez le nom de l\'utilisateur à supprimer : </string>
    <string name="del_btn_return">Retour</string>

    <string name="display_btn_back">Retour</string>

    <string name="history_btn_return">Retour</string>
    <string name="history_tv_no_runs">Vous n\'avez pas encore enregistré de course.</string>

    <string name="log_tv_login">Login : </string>
    <string name="log_et_hint_login">Entrez ici votre login</string>
    <string name="log_btn_login">Se connecter</string>
    <string name="log_btn_add_user">Nouvel utilisateur</string>
    <string name="log_btn_del_user">Supprimer utilisateur</string>
    <string name="log_tv_error">Cet utilisateur n\'existe pas.</string>

    <string name="print_btn_display_run">Afficher la course</string>
    <string name="print_tv_end">Fin de la course ! Félicitations !</string>
    <string name="print_tv_end_error">La course que vous venez de terminer est invalide, elle ne sera donc pas enregistrée.</string>
    <string name="print_btn_new_run">Retour</string>
    <string name="print_btn_logout">Déconnexion</string>

    <string name="start_btn_history">Historique</string>
    <string name="start_btn_logout">Déconnexion</string>
    <string name="start_btn_start">Start</string>

    <string name="stop_btn_stop">Stop</string>

    <string name="no">Non</string>
    <string name="yes">Oui</string>
    <string name="title_activity_maps">Map</string>
</resources>
