<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DeleteUserActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="goToLogin"
        android:text="@string/del_btn_return" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/del_tv_warning" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/del_tv_enter_name" />

    <ListView
        android:id="@+id/del_listview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:divider="@color/user_divider"
        android:dividerHeight="1dp" />

    <!--
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="deleteUser"
        android:text="@string/del_btn_delete" />
    -->

</LinearLayout>